--- a/header.css
+++ b/header.css
@@ -111,7 +111,7 @@
 	top: var(--header-height);
 	left: 0;
 	width: 100%;
-	height: calc(100dvh - 100px);
+	height: calc(100vh - 100px);
 	background-color: black;
 	z-index: 999999;
 }
